Fix de errata en un selector de la clase .hiddenFooter y añadida la propiedad overflow-y: scroll para evitar que se desencuadre en contenedor al tener muchas canciones.

--- a/less/content.less
+++ b/less/content.less
@@ -49,9 +49,13 @@ body{
         height: 100%;
         left: 0;
         top: 0;
-        background: rgba(51, 51, 51, 0.4);
+        //background: rgba(51, 51, 51, 0.4);
         z-index: 2;
     }
+}
+
+body {
+    overflow-y: scroll;
 }
 
 button:disabled{
